feat: 新增v-slide-in自定义指令, 修复点击视频进度条任意位置存在市场偏差问题

--- a/berry-frontend/src/utils/reset.css
+++ b/berry-frontend/src/utils/reset.css
@@ -40,3 +40,16 @@ table {
 p {
   word-wrap: break-word;
 }
+
+video::-webkit-media-controls-fullscreen-button {
+  display: none;
+}
+video::-webkit-media-controls-play-button {
+  display: none;
+}
+video::-webkit-media-controls-volume-control-container {
+  display: none;
+}
+video::-webkit-media-controls-timeline {
+  display: none;
+}
