feat: 封装视频上传组件

--- a/berry-frontend/src/style/user-defined.css
+++ b/berry-frontend/src/style/user-defined.css
@@ -120,3 +120,32 @@
 .custom-input:hover {
   border-color: var(--light-pink);
 }
+
+/* textarea */
+.textarea-raspberry {
+  padding: 10px 15px;
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(236, 101, 107, 0.1);
+  transition: box-shadow 0.3s ease;
+  outline: none;
+  color: var(--font-color);
+  background-color: #fff;
+  resize: vertical; /* 只允许垂直调整大小 */
+  width: 100%; /* 默认宽度 */
+  min-height: 100px; /* 最小高度 */
+}
+
+.textarea-raspberry:focus {
+  box-shadow: 0 6px 10px rgba(236, 101, 107, 0.2);
+}
+
+.textarea-raspberry::placeholder {
+  color: #ec656b;
+  opacity: 0.7;
+}
+
+.textarea-raspberry:hover {
+  box-shadow: 0 6px 10px rgba(236, 101, 107, 0.15);
+}
