--- a/berry-frontend/src/style/reset-theme.scss
+++ b/berry-frontend/src/style/reset-theme.scss
@@ -3,7 +3,7 @@
 @forward '~element-plus/theme-chalk/src/common/var.scss' with (
   $colors: (
     'primary': (
-      'base': green,
+      'base': #409eff,
     ),
     'success': (
       'base': #67c23a,
