feat: 实现搜索功能, 可搜索用户和视频; 针对视频播放器页面样式重构

--- a/berry-frontend/src/style/user-defined.css
+++ b/berry-frontend/src/style/user-defined.css
@@ -1,6 +1,6 @@
 :root {
-  --raspberry-pink: #ec656b;
-  --light-pink: #ee7b87;
+  --raspberry-pink: #eb4553;
+  --light-pink: #f66c75;
   --soft-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 
   --plain-color: #f7f9fa;
